--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
 	<title>Alexis Trupin</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-	<meta name="description" content="Étudiant en Développement" />
-	<meta name="theme-color" content="#000218" />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Étudiant en Développement">
+	<meta name="theme-color" content="#000218">
 	<style>
 		html {
 			scroll-behavior: smooth;
@@ -175,7 +175,7 @@
 	<header>
 		<h1>Alexis Trupin</h1>
 		<h2>Étudiant en Développement</h2>
-		<img id="arrow" class="js-link" src="assets/arrow.png" alt="Vers le bas" />
+		<img id="arrow" class="js-link" src="assets/arrow.png" alt="Vers le bas">
 	</header>
 
 	<div id="bonjour" class="black">
@@ -199,15 +199,15 @@
 
 	<div class="container">
 		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/cardboard/github-back.jpg');">
-			<img src="assets/cardboard/github.png" alt="Logo GitHub" />
+			<img src="assets/cardboard/github.png" alt="Logo GitHub">
 			<h3><a href="https://github.com/HydroSnow">github.com/HydroSnow</a></h3>
 		</div>
 		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/cardboard/mail-back.jpg');">
-			<img src="assets/cardboard/mail.png" alt="Logo GitHub" />
+			<img src="assets/cardboard/mail.png" alt="Logo GitHub">
 			<h3>trupin.alexis@gmail.com</h3>
 		</div>
 		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/cardboard/linkedin-back.jpg');">
-			<img src="assets/cardboard/linkedin.png" alt="Logo LinkedIn" />
+			<img src="assets/cardboard/linkedin.png" alt="Logo LinkedIn">
 			<h3><a href="https://www.linkedin.com/in/trupin/">linkedin.com/in/trupin</a></h3>
 		</div>
 	</div>
@@ -215,9 +215,9 @@
 	<footer class="black">
 		<h2>&copy; 2019, Alexis Trupin</h2>
 		<p class="gray">Tous droits réservés
-			<br /> <a href="https://github.com/HydroSnow/trupin.dev">github.com/HydroSnow/trupin.dev</a> </p>
+			<br> <a href="https://github.com/HydroSnow/trupin.dev">github.com/HydroSnow/trupin.dev</a> </p>
 		<p class="gray">Hébergeur : <a href="https://www.ovh.com/fr/">OVH SAS</a>
-			<br /> 2 rue Kellermann, 59100 Roubaix, France</p>
+			<br> 2 rue Kellermann, 59100 Roubaix, France</p>
 	</footer>
 
 	<script src="node_modules/particles.js/particles.js"></script>
