--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 			<h3><a href="https://github.com/HydroSnow">github.com/HydroSnow</a></h3>
 		</div>
 		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/cardboard/mail-back.jpg');">
-			<img src="assets/cardboard/mail.png" alt="Logo GitHub">
+			<img src="assets/cardboard/mail.png" alt="Logo E-Mail">
 			<h3>trupin.alexis@gmail.com</h3>
 		</div>
 		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/cardboard/linkedin-back.jpg');">
