updating some path

--- a/index.html
+++ b/index.html
@@ -192,22 +192,22 @@
 
 	<div class="cv-section">
 		<div class="cv-container">
-			<img src="assets/cv/CV_Alexis_Trupin_NA.png" alt="Mon CV">
+			<img src="cv/CV_Alexis_Trupin_NA.png" alt="Mon CV">
 		</div>
-		<p><a href="assets/cv/CV_Alexis_Trupin_NA.pdf">Télécharger le CV</a></p>
+		<p><a href="cv/CV_Alexis_Trupin_NA.pdf">Télécharger le CV</a></p>
 	</div>
 
 	<div class="container">
-		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/cardboard/github-back.jpg');">
-			<img src="assets/cardboard/github.png" alt="Logo GitHub">
+		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/github-back.jpg');">
+			<img src="assets/github.png" alt="Logo GitHub">
 			<h3><a href="https://github.com/HydroSnow">github.com/HydroSnow</a></h3>
 		</div>
-		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/cardboard/mail-back.jpg');">
-			<img src="assets/cardboard/mail.png" alt="Logo E-Mail">
+		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/mail-back.jpg');">
+			<img src="assets/mail.png" alt="Logo E-Mail">
 			<h3>trupin.alexis@gmail.com</h3>
 		</div>
-		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/cardboard/linkedin-back.jpg');">
-			<img src="assets/cardboard/linkedin.png" alt="Logo LinkedIn">
+		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/linkedin-back.jpg');">
+			<img src="assets/linkedin.png" alt="Logo LinkedIn">
 			<h3><a href="https://www.linkedin.com/in/trupin/">linkedin.com/in/trupin</a></h3>
 		</div>
 	</div>
