--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
 		}
 
 		@keyframes fadein {
-			from { opacity: 0; }
-			to { opacity: 1; }
+			from {
+				opacity: 0;
+			}
+
+			to {
+				opacity: 1;
+			}
 		}
 
 		#particles {
@@ -187,7 +192,7 @@
 		const bonjour = document.getElementById('bonjour');
 		arrow.onclick = function() {
 			bonjour.scrollIntoView(true);
-		}
+		};
 	</script>
 
 	<div class="cv-section">
@@ -241,7 +246,7 @@
 			toggleParticles.onclick = function() {
 				window.localStorage.setItem('particles', 'false');
 				document.location.reload(false);
-			}
+			};
 			particlesJS.load('particles', 'assets/particles.json', function() {
 				document.getElementById('particles').classList.add('fadein');
 			});
@@ -250,10 +255,10 @@
 			toggleParticles.onclick = function() {
 				window.localStorage.setItem('particles', 'true');
 				document.location.reload(false);
-			}
+			};
 		}
 	</script>
 </body>
 
 </html>
-<!-- t'es moche, petit fouineur -->
+<!-- h4ck1ng -->
