using darkened image files instead of linear gradient css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Étudiant en Développement">
-	<meta name="theme-color" content="#000218">
+	<meta name="theme-color" content="#000232">
 	<style>
 		html {
 			scroll-behavior: smooth;
@@ -19,7 +19,7 @@
 			text-align: center;
 			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
-			background-image: linear-gradient(#0008, #0008), url('assets/snow-village.jpg');
+			background-image: url('assets/snow-village-dark.jpg');
 			background-position: center center;
 			background-size: cover;
 			background-attachment: fixed;
@@ -203,15 +203,15 @@
 	</div>
 
 	<div class="container">
-		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/github-back.jpg');">
+		<div class="cardboard" style="background-image: url('assets/github-back-dark.jpg');">
 			<img src="assets/github.png" alt="Logo GitHub">
 			<h3><a href="https://github.com/HydroSnow">github.com/HydroSnow</a></h3>
 		</div>
-		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/mail-back.jpg');">
+		<div class="cardboard" style="background-image: url('assets/mail-back-dark.jpg');">
 			<img src="assets/mail.png" alt="Logo E-Mail">
 			<h3>trupin.alexis@gmail.com</h3>
 		</div>
-		<div class="cardboard" style="background-image: linear-gradient(#000A, #000A), url('assets/linkedin-back.jpg');">
+		<div class="cardboard" style="background-image: url('assets/linkedin-back-dark.jpg');">
 			<img src="assets/linkedin.png" alt="Logo LinkedIn">
 			<h3><a href="https://www.linkedin.com/in/trupin/">linkedin.com/in/trupin</a></h3>
 		</div>
