--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 		</div>
 		<div class="cardboard" style="background-image: url('assets/mail-back-dark.jpg');">
 			<img src="assets/mail.png" alt="Logo E-Mail">
-			<h3>trupin.alexis@gmail.com</h3>
+			<h3><a href="mailto:trupin.alexis@gmail.com">trupin.alexis@gmail.com</a></h3>
 		</div>
 		<div class="cardboard" style="background-image: url('assets/linkedin-back-dark.jpg');">
 			<img src="assets/linkedin.png" alt="Logo LinkedIn">
