--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fr-FR">
 
 <head>
-	<title>Alexis Trupin</title>
 	<meta charset="utf-8">
+	<title>Alexis Trupin</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Étudiant en Développement">
 	<meta name="theme-color" content="#000232">
@@ -17,7 +17,7 @@
 
 			color: white;
 			text-align: center;
-			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+			font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 
 			background-image: url('assets/snow-village-dark.jpg');
 			background-position: center center;
@@ -153,6 +153,18 @@
 			width: 64px;
 		}
 
+		.github {
+			background-image: url('assets/github-back-dark.jpg');
+		}
+
+		.mail {
+			background-image: url('assets/mail-back-dark.jpg');
+		}
+
+		.linkedin {
+			background-image: url('assets/linkedin-back-dark.jpg');
+		}
+
 		footer {
 			padding: 16px;
 		}
@@ -203,15 +215,15 @@
 	</div>
 
 	<div class="container">
-		<div class="cardboard" style="background-image: url('assets/github-back-dark.jpg');">
+		<div class="cardboard github">
 			<img src="assets/github.png" alt="Logo GitHub">
 			<h3><a href="https://github.com/HydroSnow">github.com/HydroSnow</a></h3>
 		</div>
-		<div class="cardboard" style="background-image: url('assets/mail-back-dark.jpg');">
+		<div class="cardboard mail">
 			<img src="assets/mail.png" alt="Logo E-Mail">
 			<h3><a href="mailto:trupin.alexis@gmail.com">trupin.alexis@gmail.com</a></h3>
 		</div>
-		<div class="cardboard" style="background-image: url('assets/linkedin-back-dark.jpg');">
+		<div class="cardboard linkedin">
 			<img src="assets/linkedin.png" alt="Logo LinkedIn">
 			<h3><a href="https://www.linkedin.com/in/trupin/">linkedin.com/in/trupin</a></h3>
 		</div>
