adding hover effect to cardboards

--- a/index.html
+++ b/index.html
@@ -144,7 +144,13 @@
 			flex-grow: 1;
 
 			background-position: center center;
-			background-size: cover;
+			background-size: 100%;
+
+    		transition: all 1s;
+		}
+
+		.cardboard:hover {
+			background-size: 110%;
 		}
 
 		.cardboard > img {
