adding pixabay link

--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
 			<br> <a href="https://github.com/HydroSnow/trupin.dev">github.com/HydroSnow/trupin.dev</a> </p>
 		<p class="gray">Hébergeur : <a href="https://www.ovh.com/fr/">OVH SAS</a>
 			<br> 2 rue Kellermann, 59100 Roubaix, France</p>
+		<p class="gray">Image d'arrière plan :
+			<br> <a href="https://pixabay.com/fr/photos/castelmezzano-italie-village-ville-1979546/">Castelmezzano sur Pixabay</a></p>
 	</footer>
 
 	<script src="node_modules/particles.js/particles.js"></script>
