--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Étudiant en Développement">
 	<meta name="theme-color" content="#000232">
-	<link rel="icon" href="favicon.ico" />
+	<link rel="icon" href="assets/favicon.ico" />
 	<style>
 		html {
 			scroll-behavior: smooth;
