now hosted by digitalocean

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 		<h2>&copy; 2019, Alexis Trupin</h2>
 		<p class="gray">Tous droits réservés
 			<br> <a href="https://github.com/HydroSnow/trupin.dev">github.com/HydroSnow/trupin.dev</a> </p>
-		<p class="gray">Hébergeur : <a href="https://www.ovh.com/fr/">OVH SAS</a>
-			<br> 2 rue Kellermann, 59100 Roubaix, France</p>
+		<p class="gray">Hébergeur : <a href="https://www.digitalocean.com/">DigitalOcean, LLC</a>
+			<br> 101 Avenue of the Americas, 10th Floor, New York, États-Unis</p>
 		<p class="gray">Image d'arrière plan :
 			<br> <a href="https://pixabay.com/fr/photos/castelmezzano-italie-village-ville-1979546/">Castelmezzano sur Pixabay</a></p>
 	</footer>
